crates/ruff_linter/src/rules/flake8_future_annotations/snapshots/ruff_linter__rules__flake8_future_annotations__tests__import_typing.py.snap
---
source: crates/ruff_linter/src/rules/flake8_future_annotations/mod.rs
---
FA100 [*] Add `from __future__ import annotations` to simplify `typing.List`
 --> import_typing.py:5:13
  |
4 | def main() -> None:
5 |     a_list: typing.List[str] = []
  |             ^^^^^^^^^^^
6 |     a_list.append("hello")
  |
help: Add `from __future__ import annotations`
  |
1 + from __future__ import annotations
  |
note: This is an unsafe fix and may change runtime behavior
