crates/ruff_linter/src/rules/flake8_future_annotations/snapshots/ruff_linter__rules__flake8_future_annotations__tests__with_tc002.py.snap
---
source: crates/ruff_linter/src/rules/flake8_future_annotations/mod.rs
---
with_tc002.py:4:8: FA100 Add `from __future__ import annotations` to simplify `pandas`
  |
2 | allow TC002 to apply."""
3 |
4 | import pandas
  |        ^^^^^^ FA100
5 |
6 | def func(df: pandas.DataFrame) -> int:
  |
